--- a/views/diet.ejs
+++ b/views/diet.ejs
@@ -12,27 +12,32 @@
    </head>
    <body>
       <div id="navbar">
-         <a class="logo-box" href="index.html">
-         <img src="../Images/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Images/logo2.svg';" onmouseout="this.src='../Images/logo.svg';">
-         </a>
+         <a class="logo-box" href="/">
+         <img src="/Images/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Images/logo2.svg';" onmouseout="this.src='../Images/logo.svg';">
+     </a>
+ 
          <div class="topnav-right">
-            <a class="underline" href="mindfulness.html">
-            <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
-            </a>
-            <a class="underline" href="habits.html">
-            <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
-            </a>
-            <a class="underline-active" href="diet.html">
-            <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
-            </a>
-            <a class="underline" href="lockdown.html">
-            <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
-            </a>
-            <a class="underline" href="clinics.html">
-            <img src="../Images/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
-            </a>
-         </div>
-      </div>
+         <a class="underline" href="mindfulness">
+             <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
+         </a>
+         
+         <a class="underline" href="habits">
+             <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
+         </a>
+ 
+         <a class="underline-active" href="diet">
+             <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
+         </a>
+ 
+         <a class="underline" href="lockdown">
+             <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
+         </a>
+ 
+         <a class="underline" href="clinics">
+             <img src="../Images/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
+         </a>
+       </div>
+       </div>
       <div class="cn-whitespace"></div>
       <section>
         <svg width="90" height="90" viewBox="0 0 123 122" fill="black" xmlns="http://www.w3.org/2000/svg">
