--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,11 +37,16 @@
         </a>
       </div>
       </div>
-      <% clinicsList.forEach(clinic => { %>
-        <p><%= clinic.name %></p>
-        <p><%= clinic.address %></p>
-        <% }) %>
-
-
+        <div class="footer-content">
+            <b>Mental Assist</b>
+            Glasgow Caledonian University - Honours Project [MHW225671] </br>
+            Ⓒ 2022 Copyright: Ivan Todorov [S1822426]
+            <div class="footer-link">
+               <a class="footer-link-button" href="https://www.facebook.com/GlasgowCaledonianUniversity/" target="_blank"> <i class="fab fa-facebook-f icon"> </i></a>
+               <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
+               <a class="footer-link-button" href="https://www.linkedin.com/school/glasgow-caledonian-university/" target="_blank"> <i class="fab fa-linkedin-in icon"></i></a></li>
+               <a class="footer-link-button" href="https://www.instagram.com/gcu_studentlife/" target="_blank"><i class="fab fa-instagram-square"> </i></a></li>
+            </div>
+         </div>
 </body>
 </html>
