--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ivan Todorov">
-    <link rel="stylesheet" href="CSS/Stylesheet.css"/>
-    <title>Mental Assist | Homepage</title>
-</head>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Ivan Todorov">
+      <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css"/>
+      <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
+      <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
+      <title>Mental Assist | Homepage</title>
+   </head>
 <body>
 
     <div id="navbar">
