Introductory video implemented on the home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,14 @@
         </a>
       </div>
       </div>
+
+
+  <section class="showcase">
+    <video src="../Images/video.mp4" muted loop autoplay></video>
+    <div class="overlay"></div> 
+  </section>
+
+
         <div class="footer-content">
             <b>Mental Assist</b>
             Glasgow Caledonian University - Honours Project [MHW225671] </br>
