--- a/public/CSS/Stylesheet.css
+++ b/public/CSS/Stylesheet.css
@@ -11,6 +11,7 @@ body {
 	padding: 0;
 	line-height: 1.8;
 	text-align: justify;
+	box-sizing: border-box;
 }
 
 .header {
@@ -433,3 +434,42 @@ a.footer-link-button:hover {
 	  background: #ECEAE4;
 	}
   }
+
+  
+  .showcase
+  {
+	position: absolute;
+	right: 0;
+	width: 100%;
+	min-height: 100vh;
+	padding: 100px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background: #111;
+	transition: 0.5s;
+	z-index: 2;
+  }
+
+  .showcase video
+  {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	opacity: 0.8;
+  }
+  
+  .overlay
+  {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #003DA6;
+	mix-blend-mode: overlay;
+  }
+  
