Scroll back-to-top button with smooth transition

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,6 @@
       <title>Mental Assist | Homepage</title>
    </head>
 <body>
-
     <div id="navbar">
         <a class="logo-box" href="/">
         <img src="/Images/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Images/logo2.svg';" onmouseout="this.src='../Images/logo.svg';">
@@ -56,6 +55,7 @@
                <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
                <a class="footer-link-button" href="https://www.linkedin.com/school/glasgow-caledonian-university/" target="_blank"> <i class="fab fa-linkedin-in icon"></i></a></li>
                <a class="footer-link-button" href="https://www.instagram.com/gcu_studentlife/" target="_blank"><i class="fab fa-instagram-square"> </i></a></li>
+               <a class="footer-link-button" href="#navbar" ><i class="fa fa-angle-up"> </i></a></li>
             </div>
          </div>
 </body>
