--- a/public/CSS/Stylesheet.css
+++ b/public/CSS/Stylesheet.css
@@ -12,6 +12,7 @@ body {
 	line-height: 1.8;
 	text-align: justify;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 
 .header {
@@ -473,3 +474,12 @@ a.footer-link-button:hover {
 	mix-blend-mode: overlay;
   }
   
+  .fa-angle-up {
+	font-size: 2rem;
+	border: 4px solid #251607;
+	border-radius: 50px;
+	width: 2.5rem;
+	height: 2.5rem;
+	text-align: center;
+	float: right;
+  }
