--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -8,7 +8,7 @@
       <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css"/>
       <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
       <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
-      <title>Mental Assist | Habits</title>
+      <title>Mental Assist | Clinics</title>
 </head>
 <body>
 
@@ -88,6 +88,7 @@
        <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
        <a class="footer-link-button" href="https://www.linkedin.com/school/glasgow-caledonian-university/" target="_blank"> <i class="fab fa-linkedin-in icon"></i></a></li>
        <a class="footer-link-button" href="https://www.instagram.com/gcu_studentlife/" target="_blank"><i class="fab fa-instagram-square"> </i></a></li>
+       <a class="footer-link-button" href="#navbar" ><i class="fa fa-angle-up"> </i></a></li>
     </div>
  </div>
 </body>
