--- a/views/mindfulness.ejs
+++ b/views/mindfulness.ejs
@@ -113,6 +113,7 @@
             <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
             <a class="footer-link-button" href="https://www.linkedin.com/school/glasgow-caledonian-university/" target="_blank"> <i class="fab fa-linkedin-in icon"></i></a></li>
             <a class="footer-link-button" href="https://www.instagram.com/gcu_studentlife/" target="_blank"><i class="fab fa-instagram-square"> </i></a></li>
+            <a class="footer-link-button" href="#navbar" ><i class="fa fa-angle-up"> </i></a></li>
          </div>
       </div>
    </body>
