--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,62 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="author" content="Ivan Todorov">
-      <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css"/>
-      <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
-      <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
-      <title>Mental Assist | Homepage</title>
-   </head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ivan Todorov">
+    <link rel="stylesheet" type="text/css" href="../CSS/Stylesheet.css" />
+    <link rel="stylesheet" href="hJps://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/fontawesome.min.css">
+    <script src="https://kit.fontawesome.com/5c4ebf68fc.js" crossorigin="anonymous"></script>
+    <title>Mental Assist | Homepage</title>
+  </head>
+  <body>
     <div id="navbar">
-        <a class="logo-box" href="/">
+      <a class="logo-box" href="/">
         <img src="/Images/logo.svg" alt="Mental Assist Logo" width="180rem" height="140rem" onmouseover="this.src='../Images/logo2.svg';" onmouseout="this.src='../Images/logo.svg';">
-    </a>
-
-        <div class="topnav-right">
+      </a>
+      <div class="topnav-right">
         <a class="underline" href="mindfulness">
-            <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness   
-        </a>
-        
+          <img src="../Images/mindfulness-icon.svg" alt="Mindfulness" width="35rem" height="35rem"> Mindfulness </a>
         <a class="underline" href="habits">
-            <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits   
-        </a>
-
+          <img src="../Images/habits-icon.svg" alt="Habits" width="35rem" height="35rem"> Habits </a>
         <a class="underline" href="diet">
-            <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet   
-        </a>
-
+          <img src="../Images/diet-icon.svg" alt="Diet" width="35rem" height="35rem"> Diet </a>
         <a class="underline" href="lockdown">
-            <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Lockdown   
-        </a>
-
+          <img src="../Images/lockdown-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Lockdown </a>
         <a class="underline" href="clinics">
-            <img src="../Images/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem">  Clinics   
-        </a>
+          <img src="../Images/clinics-icon.svg" alt="Lockdown" width="35rem" height="35rem"> Clinics </a>
       </div>
-      </div>
-
-
-  <section class="showcase">
-    <video src="../Images/video.mp4" muted loop autoplay></video>
-    <div class="overlay"></div> 
-  </section>
-
-
-        <div class="footer-content">
-            <b>Mental Assist</b>
-            Glasgow Caledonian University - Honours Project [MHW225671] </br>
-            Ⓒ 2022 Copyright: Ivan Todorov [S1822426]
-            <div class="footer-link">
-               <a class="footer-link-button" href="https://www.facebook.com/GlasgowCaledonianUniversity/" target="_blank"> <i class="fab fa-facebook-f icon"> </i></a>
-               <a class="footer-link-button" href="https://twitter.com/gcu_studentlife" target="_blank"> <i class="fab fa-twitter icon"> </i></a>
-               <a class="footer-link-button" href="https://www.linkedin.com/school/glasgow-caledonian-university/" target="_blank"> <i class="fab fa-linkedin-in icon"></i></a></li>
-               <a class="footer-link-button" href="https://www.instagram.com/gcu_studentlife/" target="_blank"><i class="fab fa-instagram-square"> </i></a></li>
-               <a class="footer-link-button" href="#navbar" ><i class="fa fa-angle-up"> </i></a></li>
-            </div>
-         </div>
-</body>
+    </div>
+    <section class="showcase">
+      <video src="../Images/video.mp4" muted loop autoplay></video>
+      <div class="overlay"></div>
+    </section>
+  </body>
 </html>
